Fixed: workday sensor now set to England instead of UK to ignore bank hols in Scotland/Wales Added: new workday sensor for AD

--- a/includes/binary_sensors.yaml
+++ b/includes/binary_sensors.yaml
@@ -28,4 +28,8 @@
       value_template: >
          {{ 16 <= now().hour < 18 }}
 - platform: workday
-  country: GB
+  country: England
+- platform: workday
+  name: workday_anna
+  excludes: [sat, sun, mon, wed, holiday]
+  country: England
