--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -21,7 +21,10 @@
         {%- set doge = state_attr('sensor.coinbase_doge_wallet','Balance in native currency')[:-4] | int %}
         {%- set sol = state_attr('sensor.coinbase_sol_wallet','Balance in native currency')[:-4] | int %}
         {{ "£%.2f" | format (btc + eth + ltc + xlm + doge + sol)}} GBP
-
+    calendar_family_next_title: 
+      value_template: '{{ states.calendar.family.attributes.message}}'
+    calendar_family_next_start: 
+      value_template: '{{ as_timestamp(states.calendar.family.attributes.start_time) | timestamp_custom("%A %H:%M") }}'
 - platform: template
   sensors:
     vacuum_state:
