Changed: Reverted back to reading default tag id instead of NDEF which was slow an unreliable

--- a/automations.yaml
+++ b/automations.yaml
@@ -840,7 +840,7 @@
         media_content_id: https://tdroza.duckdns.org/local/bomb.mp3
         media_content_type: music
         title: Fact Bomb!
-      dd480ab0-5b4d-426e-8956-5c7736589bed:
+      04-5C-6E-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F4Z0FQvDMnNyIOtJeBa93%2Frecordings%2FHzFp8GQRWwFEbkB4hSLw%2Frecordings%2Faudio.mp3?alt=media&token=b107fb98-e8af-4d60-908c-3be902cc76f6
         media_content_type: music
         title: Star Wars
@@ -856,7 +856,7 @@
       b8777c03-86f1-48cd-a844-d14bb6d0a59e:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6WI5vrqc6snoccsxsUV2%2Frecordings%2FTdQPRZxJpMG8w6xA3asa%2Frecordings%2Faudio.mp3?alt=media&token=ee3e9093-f4b5-44c6-8571-f362cc2a884c
         media_content_type: music
-        titel: The Bear, The Piano, The Dog and the Fiddle
+        title: The Bear, The Piano, The Dog and the Fiddle
       B9-17-08-8E:
         media_content_id: https://chtbl.com/track/43774/traffic.megaphone.fm/SONY2917056284.mp3
         media_content_type: music
@@ -866,31 +866,31 @@
       04-0F-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FGH4ZnxM7M8oxbVZEmV4T%2Frecordings%2FOZljR1hXy7orkCBrha9f%2Frecordings%2Faudio.mp3?alt=media&token=9d6f367f-4521-4e0b-9b7d-66500f2ef836
         media_content_type: music
-      264fe312-b244-4631-8cc0-21e03a34c84c:
+      04-1B-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FZTe10kJMfXgNaiSCsStC%2Frecordings%2FKksLQS6LUXWLrBbtDusZ%2Frecordings%2Faudio.mp3?alt=media&token=46232d75-e430-4b11-a532-4185a96a34dd
         media_content_type: music
         title: What the Ladybird Heard
-      ce39e080-b2a6-41df-8118-bb13852196c3:
+      04-27-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F0CSxJ7wAn8p7s6adeqAx%2Frecordings%2F82kgp14YF6iJtU77IaSd%2Frecordings%2Faudio.mp3?alt=media&token=68bdd707-2f64-47a6-9887-8b86dd6b73d4
         media_content_type: music
         title: Tiddler
-      e564ca77-ed6a-4de1-8f43-80406a252611:
+      04-21-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FvGG2EXQ9sp2HOS9f74UB%2Frecordings%2FfKgkUvjMMQZYIM5XT2Wd%2Frecordings%2Faudio.mp3?alt=media&token=096ef499-c35d-44fa-a9eb-2c9ca5cb9ec0
         media_content_type: music
         title: Lady of Shallot
-      ef01de9a-495d-4c06-b0df-884b58f1da27:
+      04-7E-6E-62-90-6B-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FEfVUE7f9cD3ggPOJG3WG%2Frecordings%2F5YLWhtixOsEX4ju064js%2Frecordings%2Faudio.mp3?alt=media&token=60cd78ce-af61-4982-86b7-604a6ddf7985
         media_content_type: music
         title: Zog and the Flying Doctors
-      0f879ebc-f9be-48b9-baf3-2f9511f0b6c3:
+      04-15-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FQkcZLdHAK2DgO8L8FDgG%2Frecordings%2FDGc9pUmUPbzHwhAvImCc%2Frecordings%2Faudio.mp3?alt=media&token=2e7a5558-c610-44d8-b03f-534e0b1f2a24
         media_content_type: music
         title: Monkey Puzzle
-      7a45dacb-6a7b-450d-a445-1bc180e3b7d2:
+      04-82-6E-62-90-6B-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6aOQWFLcP8N40QSpBiVL%2Frecordings%2Frxu1QkpPKd9wYwX2094m%2Frecordings%2Faudio.mp3?alt=media&token=964f2092-cd0d-4f29-a0f9-cbd1cc3670a3
         media_content_type: music
         title: The Snail and the Whale
-      937e676e-9590-4ae2-87ed-e484525deffa:
+      04-64-7F-62-EC-6B-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FWAmgOrvRTRaoApufBwFJ%2Frecordings%2F8OwDv4WuCySO2j6tBAkd%2Frecordings%2Faudio.mp3?alt=media&token=b34ac6ea-9052-4a30-9f86-788f7a39e438
         media_content_type: music
         title: Peace at last
@@ -900,51 +900,51 @@
       04-7A-6E-62-90-6B-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6WD7fy4W11bVKV2Gd8o9%2Frecordings%2FCToJUbTb6lN9gitTkCNd%2Frecordings%2Faudio.mp3?alt=media&token=065cf49f-b8bc-4ba3-9cb4-304d2ebd64ff
         media_content_type: music
-      30eae54d-5266-4873-b9c9-c414a697431f:
+      04-76-6E-62-90-6B-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2Fo2FeQfUcl5rRgzEkitho%2Frecordings%2F6OgP7oT0UzA6O0OGZUYB%2Frecordings%2Faudio.mp3?alt=media&token=98a53f04-c488-408f-bf77-49c20fea70c8
         media_content_type: music
         title: Aussie Hokey Pokey
-      3b3ff03f-2c30-44af-ad5f-4cbc383cfaf3:
+      04-11-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2Fr6uZZnI0groNWT5WZ7Q6%2Frecordings%2FtbH0tAPWPRNQwqERZPDV%2Frecordings%2Faudio.mp3?alt=media&token=59870357-8fa9-42ec-b3f2-427bd507aa59
         media_content_type: music
         title: The Very Hungry Bear
-      38625930-d920-4390-b295-342e0f8d4981:
+      04-21-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FxYIn8pzCyYeS10gdtQu2%2Frecordings%2FxcvKHkKYr9CAE4x92SNO%2Frecordings%2Faudio.mp3?alt=media&token=f76abe00-e319-442f-9005-a369c8beb3e1
         media_content_type: music
         title: Sugarlump & The Unicorn
-      7724c172-0caf-4167-ac08-62214c32ce83:
+      04-15-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FxSY7s30WsI7vekKXEKDb%2Frecordings%2FfdxzoTGrxO4ZkgCiMiVy%2Frecordings%2Faudio.mp3?alt=media&token=8d1fe17f-d124-4ab8-a553-5e5941b754ec
         media_content_type: music
         title: The Cave
-      ef652d32-50b2-48e6-aed5-2315ea416fd7:
+      04-19-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FtVyUc0pXJ2pyGYt9HXor%2Frecordings%2FDa0xO76KGBbbtC4TsrUG%2Frecordings%2Faudio.mp3?alt=media&token=ff9cc69d-ef39-4530-a29f-c681144f2c77
         media_content_type: music
         title: The Paper Dolls
-      75a5583b-7154-4b16-b0fd-13ec454f6e7b:
+      04-1D-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FiZ9ToRDmRaD9LjLDXNPf%2Frecordings%2F2CjY7QGcCibMzgbcSJP3%2Frecordings%2Faudio.mp3?alt=media&token=73b881c5-6ca7-4881-82f5-eec3169e2f3a
         media_content_type: music
         title: Snow Bears
-      83257e19-fda5-46b5-8156-75bcd4a520dc:
+      04-6C-6E-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FqIPowPEK0tCVemQmpfwH%2Frecordings%2F3rwPo84uEi87pVZvA2cM%2Frecordings%2Faudio.mp3?alt=media&token=99739671-2b12-494a-bdf1-552678328217
         media_content_type: music
         title: Room on the broom
-      6776354b-5d8f-4688-bb9a-de311bba9a2c:
+      04-83-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F1kMvM6x73qpu5kTE1DBh%2Frecordings%2FIo2EfTtgUOuNZrFu8dXg%2Frecordings%2Faudio.mp3?alt=media&token=45db828b-657b-4f81-a586-bbc4b4dd85ec
         media_content_type: music
         title: Bringing down the moon
-      41ee608d-f633-4a10-b5be-df7f4cb5ee3f:
+      04-7F-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F9FurTGgHRm9ycvFjix6X%2Frecordings%2FIBfJxanebnWT8CZPRYTI%2Frecordings%2Faudio.mp3?alt=media&token=2af233f9-0bc9-46c1-af63-99017560556c
         media_content_type: music
         title: The Gruffalo
-      f671b9cc-d462-4428-b3fd-e77dcd5480ed:
+      04-77-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FXSe2PPsM5cZ1RGDyQQDg%2Frecordings%2Fb0oXZw8itwmUIw11vmRZ%2Frecordings%2Faudio.mp3?alt=media&token=9f0eb901-8a09-491a-ba2b-4b8a05587d1f
         media_content_type: music
         title: Alien Tea on Planet Zum-Zee
-      4a81d599-ebe0-48b1-a0aa-486bdfb0f2d5:
+      04-73-6F-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FJmpqpkXqfCBjrTm5S67I%2Frecordings%2FbuNFPC9gGbIIkZQokx1g%2Frecordings%2Faudio.mp3?alt=media&token=3215cdfe-9add-464d-8f92-e69b7737bedc
         media_content_type: music
         title: Dinky Donkey
-      1a91e48c-7757-4e8c-8cb2-988635c68fdc:
+      04-6C-7F-62-EC-6B-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F68Dfu5tTDPPeCXmUWivB%2Frecordings%2FGz1udqevXgaGvPoonUq4%2Frecordings%2Faudio.mp3?alt=media&token=c4a3ccff-07e5-4dca-8f5b-7db9bb08797b
         media_content_type: music
         title: Monty and Milli
@@ -1168,31 +1168,31 @@
       2011897b-e41a-4d94-8bbb-a51004899ad8:
         title: But Why (Seb Ring)
         podcast_counter: counter.podcast_but_why
-      717acc7a-8373-4980-ab2e-d1713b5064cd:
+      04-35-6F-AA-ED-6C-80:
         title: But Why
         podcast_counter: counter.podcast_but_why
         sensor: sensor.podcast_but_why
-      45473a1e-68f7-437b-8dcc-e2cf822b8f15:
+      04-58-6E-AA-ED-6C-80:
         title: Goodnight Stories for Rebel Girls
         podcast_counter: counter.podcast_goodnight_stories
         sensor: sensor.podcast_goodnight_stories
-      b4320308-9efc-4c66-abca-9f9119dd71e3:
+      04-7B-FC-EA-83-6B-80:
         title: Story Pirates (Reu Ring)
         podcast_counter: counter.podcast_story_pirates
         sensor: sensor.podcast_story_pirates
-      aff51ea6-9373-4281-b5e7-b46c35bc78e3:
+      04-55-6F-AA-ED-6C-80:
         title: Story Pirates
         podcast_counter: counter.podcast_story_pirates
         sensor: sensor.podcast_story_pirates
-      b1b66f6b-4a5a-4150-9c1e-5a18b3ac6c0a:
-        title: Maddie's Sound Explorers
+      04-51-6F-AA-ED-6C-80:
+        title: Maddies Sound Explorers
         podcast_counter: counter.podcast_maddie_s_sound_explorers
         sensor: sensor.podcast_sound_explorers
       04-31-6F-AA-ED-6C-80:
         title: Marvellous Musical
         podcast_counter: counter.podcast_marvellous_musical
         sensor: sensor.podcast_marvellous_musical
-      e564ca77-ed6a-4de1-8f43-80406a252611:
+      04-4D-6F-AA-ED-6C-80:
         title: Peace Out
         podcast_counter: counter.podcast_peace_out
         sensor: sensor.podcast_peace_out
