Added: More config to epaper T5 devices Changed: 2.13" epaper now has a crypto summary dashboard that (for now) overrides all other screens Added: Restart button for epaper screens added to lovelace

--- a/esphome/epaper-t5.yaml
+++ b/esphome/epaper-t5.yaml
@@ -331,7 +331,7 @@ binary_sensor:
             - logger.log: "Automatic deep sleep disabled"
             - deep_sleep.prevent: deep_sleep_1
       
-switch:
+button:
   - platform: restart
     name: "${friendly_name} Restart"
 
