--- a/esphome/epaper-t5.yaml
+++ b/esphome/epaper-t5.yaml
@@ -137,9 +137,7 @@ script:
           count: 1
           then:
           - display.page.show: page_black
-          - component.update: t5_display
           - display.page.show: page_white
-          - component.update: t5_display
       - lambda: id(updates_since_refresh) = 0;
   - id: all_data_received
     then:
@@ -164,6 +162,16 @@ script:
       - component.update: t5_display
       - lambda: |-
           id(updates_since_refresh)++;
+  - id: update_page_in_ha
+    then:
+      - homeassistant.service:
+          service: input_select.select_option
+          data_template:
+            entity_id: "input_select.epaper_page"
+            option: "{{ selected_page }}"
+          variables:
+            selected_page: |-
+              return id(current_page_select).state.c_str();
   - id: enter_sleep
     then:
       - if:
@@ -208,6 +216,19 @@ script:
           else:
             - logger.log: "Prevent deep sleep enabled."
 text_sensor:
+  - platform: homeassistant
+    id: current_page_select
+    entity_id: input_select.epaper_page
+    on_value:
+      then:
+        - lambda: |-
+            if (id(current_page_select).state == "Temperature") {
+              id(current_page) = 1;
+            } else if (id(current_page_select).state == "Crypto") {
+              id(current_page) = 2;
+            }
+        - script.execute: show_page
+        
   - platform: sun
     id: sunrise
     name: Sun Next Sunrise
@@ -311,13 +332,21 @@ binary_sensor:
     name: "Temps Page"
     on_press:
       then:
-        - lambda: 'id(current_page) = 1;'
+        - lambda: |-
+            id(current_page) = 1;
+            id(current_page_select).state = "Temperature";
+        - script.execute: refresh_display            
+        - script.execute: update_page_in_ha
+        - script.execute: show_page
   - platform: gpio
     pin: GPIO35
     name: "Crypto Page"
     on_press:
       then:
-        - lambda: 'id(current_page) = 2;'
+        - lambda: |-
+            id(current_page) = 2;
+            id(current_page_select).state = "Crypto";
+        - script.execute: update_page_in_ha
         - script.execute: show_page
 
   - platform: homeassistant
